backend/tests/results/test_m2_reorg_fail.txt
..\venv\Scripts\python.exe
 : Warning: You are 
sending unauthenticated 
requests to the HF Hub. 
Please set a HF_TOKEN to 
enable higher rate limits 
and faster downloads.
At line:1 char:1
+ ..\venv\Scripts\python.e
xe -m unittest tests/test_
module2_knowledge_b ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (W  
  arning: You ar...ster   
  downloads.:String) [    
], RemoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 

Loading weights:   0%|    
      | 0/103 [00:00<?, 
?it/s]
Loading weights:  
52%|#####2    | 54/103 
[00:00<00:00, 538.26it/s]
Loading weights: 
100%|##########| 103/103 
[00:00<00:00, 654.42it/s]
[1mBertModel LOAD 
REPORT[0m from: sentence-
transformers/all-MiniLM-L6
-v2
Key                     | 
Status     |  | 
------------------------+-
-----------+--+-
embeddings.position_ids | 
UNEXPECTED |  | 

[3mNotes:
- UNEXPECTED[3m	:can be 
ignored when loading from 
different 
task/architecture; not ok 
if you expect identical 
arch.[0m

Loading weights:   0%|    
      | 0/473 [00:00<?, 
?it/s]
Loading weights:  
57%|#####6    | 268/473 
[00:00<00:00, 2653.66it/s]
Loading weights: 
100%|##########| 473/473 
[00:00<00:00, 2583.05it/s]
The tied weights mapping 
and config for this model 
specifies to tie text_deco
der.cls.predictions.bias 
to text_decoder.cls.predic
tions.decoder.bias, but 
both are present in the 
checkpoints, so we will 
NOT tie them. You should 
update the config with `ti
e_word_embeddings=False` 
to silence this warning
The tied weights mapping 
and config for this model 
specifies to tie text_deco
der.bert.embeddings.word_e
mbeddings.weight to text_d
ecoder.cls.predictions.dec
oder.weight, but both are 
present in the 
checkpoints, so we will 
NOT tie them. You should 
update the config with `ti
e_word_embeddings=False` 
to silence this warning
[1mBlipForConditionalGene
ration LOAD REPORT[0m 
from: Salesforce/blip-imag
e-captioning-base
Key                       
                | Status  
   |  | 
--------------------------
----------------+---------
---+--+-
text_decoder.bert.embeddin
gs.position_ids | 
UNEXPECTED |  | 

[3mNotes:
- UNEXPECTED[3m	:can be 
ignored when loading from 
different 
task/architecture; not ok 
if you expect identical 
arch.[0m
E
==========================
==========================
==================
ERROR: test_module2_knowle
dge_base (unittest.loader.
_FailedTest)
--------------------------
--------------------------
------------------
ImportError: Failed to 
import test module: test_m
odule2_knowledge_base
Traceback (most recent 
call last):
  File "C:\Program Files\P
ython310\lib\unittest\load
er.py", line 154, in 
loadTestsFromName
    module = 
__import__(module_name)
  File "C:\Users\HP\Deskto
p\hrflux\HRFLUX\backend\te
sts\test_module2_knowledge
_base.py", line 30, in 
<module>
    import backend_api
ModuleNotFoundError: No 
module named 'backend_api'


--------------------------
--------------------------
------------------
Ran 1 test in 0.001s

FAILED (errors=1)
